@@ -8,7 +8,7 @@ plugins {
   id 'com.github.ben-manes.versions' version '0.39.0'
   id 'org.owasp.dependencycheck' version '6.2.2'
   id 'org.sonarqube' version '3.3'
-  id 'au.com.dius.pact' version '4.2.8'
+  id 'au.com.dius.pact' version '4.2.9'
   id 'io.freefair.lombok' version '5.3.3.3'
 }
 
@@ -86,6 +86,12 @@ task smoke(type: Test) {
   classpath = sourceSets.smokeTest.runtimeClasspath
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 configurations {
   integrationTestCompile.extendsFrom(testCompile)
   integrationTestRuntime.extendsFrom(testRuntime)
@@ -93,7 +99,6 @@ configurations {
   e2eRuntime.extendsFrom(testRuntime)
   smokeTestCompile.extendsFrom(testCompile)
   smokeTestRuntime.extendsFrom(testRuntime)
-
   testCompile.exclude module: "android-json"
   testRuntime.exclude module: "android-json"
   integrationTestCompile.exclude module: "android-json"
@@ -284,8 +289,8 @@ dependencies {
   compile group: 'uk.gov.hmcts.reform', name: 'send-letter-client', version: '3.0.3'
   compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '4.0.0'
 
-  compile group: 'com.github.hmcts', name: 'sscs-common', version: '4.4.54-RC2-SSCS-9435'
-  compile group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.4.40'
+  compile group: 'com.github.hmcts', name: 'sscs-common', version: '4.4.56'
+  compile group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.4.41'
 
   //Remove when our dependencies pull in this version or later
   compile 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
@@ -296,6 +301,7 @@ dependencies {
 
   testImplementation libraries.junit5
   testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+  testCompile 'com.github.hmcts:fortify-client:1.2.1:all'
 
   testCompile 'pl.pragmatists:JUnitParams:1.1.1'
   testCompile group: 'org.mockito', name: 'mockito-core', version: '3.11.2'
